--- a/docker/Dockerfile.native
+++ b/docker/Dockerfile.native
@@ -1,16 +1,19 @@
-FROM vegardit/graalvm-maven:latest-java21 as builder
+# Using Oracle GraalVM for JDK 17
+FROM container-registry.oracle.com/graalvm/native-image:21-ol8 AS builder
 
+# Set the working directory app
 WORKDIR /app
 
-COPY pom.xml /app/
-COPY src /app/src/
+# Copy the source code into the image for building
+COPY .. /app
 
-RUN mvn -Pnative native:compile -DskipTests
+# Build
+RUN ./mvnw --no-transfer-progress native:compile -Pnative -DskipTests
 
 # The deployment Image
-FROM mirekphd/jenkins-jdk17-on-ubuntu2204:latest
+FROM container-registry.oracle.com/os/oraclelinux:8-slim
 
-# executable file name used from pom tag <artifactId>graalvm</artifactId>
+# Copy the native executable into the containers
 COPY --from=builder /app/target/graalvm /app/
 
-CMD ["/app/graalvm"]
+ENTRYPOINT ["/app/graalvm"]
